--- a/src/app/pages/home/newsletter/newsletter.component.css
+++ b/src/app/pages/home/newsletter/newsletter.component.css
@@ -61,7 +61,7 @@
 
 .input-wrapper {
   flex: 1;
-  min-width: 280px;
+  min-width: 0;
   position: relative;
   display: flex;
   align-items: center;
